themes/dinnerdelights/source/css/style.css
/* ... */
/*Media*/

@media screen and (min-width: 521px) and (max-width: 980px) {
  #slider .caption {
    position: absolute;
    width: 450px;
    top: 50%;
  }
  #slider .caption h2 {
    font-size: 24px;
  }
  #slider .caption p {
    font-size: 16px;
    font-style: italic;
    margin-top: 15px;
    color: #789b4a;
  }
  #slider .caption .btn {
    width: 110px;
    height: 30px;
    font-size: 12px;
    margin-top: 15px;
  }
}

/*Control Nav*/

#slider .flex-control-nav {
  position: absolute;
  display: inline;
  z-index: 2;
}

#slider .flex-control-nav li {
  margin: 5px;
  display: inline-block;
}

#slider .flex-control-paging li a {
  background: #efeeeb;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  border: 1px solid #789b4a;
}

#slider .flex-control-paging li a:hover {
  background: #789b4a;
}

#slider .flex-control-paging li a.flex-active {
  background: #789b4a;
  width: 12px;
  height: 12px;
}

/* Sections */
.section {
  margin-top: 100px;
}

.section-heading {
  text-align: center;
}

.section-heading h2 {
  font-size: 56px;
}

.section-heading p {
  margin-top: 20px;
  line-height: 25px;
  color: #070606;
  margin-bottom: 50px;
}

/*About*/

.about-content {
  border: 8px solid #789b4a;
  background-color: #efeeeb;
  padding: 5vw;
  margin: 5px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: stretch;
  margin-left: auto;
  margin-right: auto;
}

.about-content .headshot,
.about-content .content {
  flex: 1 0 100%;
  padding: 10px;
}

.about-content .content {
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.about-content .content .text {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.about-content .content .text h3 {
  text-align: center;
}

@media (min-width: 768px) {
  .about-content .headshot {
    flex: 1 0 33%;
  }
  .about-content .content {
    flex: 2 0 66%;
  }
}

/*Media*/

/*Service*/

#services {
  background-attachment: scroll;
  padding-bottom: 0px;
  padding-top: 0px;
}

#services .col-md-6 {
  padding: 0;
}

#services .service-heading {
  text-align: center;
}

#services .service-heading h2 {
  font-weight: 700;
  font-size: 45px;
}

#services .service-heading p {
  margin-top: 20px;
  line-height: 25px;
  color: #efeeeb;
  margin-bottom: 50px;
}

.services-style-one {
  background: #efeeeb;
  margin-top: 25px;
}

.services-style-one .service-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: stretch;
  align-content: center;
  justify-content: space-between;
}

.services-style-one .service-block {
  flex: 1 0 100%;
  display: flex;
  padding: 25px 0;
  text-align: center;
  flex-direction: column;
  align-items: stretch;
  align-content: center;
}

/* Small devices (tablets, 768px and up) */

@media (min-width: 768px) {
  .services-style-one .service-block {
    flex: 1 0 50%;
    padding: 25px;
  }
}

.services-style-one .service-block h4 {
  flex: 0 0 52px;
}

.services-style-one .service-block .text {
  text-align: left;
  flex: 1 0 auto;
}

.services-style-one .icon-box {
  flex: 0 0 auto;
}

.services-style-one .icon-box .icon-border {
  display: inline-block;
  border-radius: 50%;
  border: 10px solid #e43d2f;
}

.price-container {
  flex: 0 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.price {
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  background-color: #602650;
  color: #efeeeb;
  height: 135px;
  width: 135px;
  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.12);
  margin: 15px auto;
}

.price-value {
  font-size: 1.8em;
  font-weight: bold;
}

.price .text-sm {
  font-size: 0.7em;
  margin-top: 0;
  color: rgba(255, 255, 255, 0.9);
}

/*Service Footer*/

#services .service-footer {
  background-color: #789b4a;
  padding: 30px 0;
}

#services .service-footer-left h3 {
  font-family: "Open Sans", sans-serif;
  font-weight: 600;
  font-size: 22px;
  color: #efeeeb;
}

#services .service-footer-left h3 > span {
  color: #efeeeb;
}

#services .service-footer-left p {
  font-size: 16px;
  color: #efeeeb;
}

#services .service-footer-right {
  float: right;
  line-height: 80px;
}

.join-content .btn,
.menu-container .btn-buy-jars,
#services .service-footer-right .btn {
  background-color: #e43d2f;
  font-weight: 600;
  color: #efeeeb;
  border: 3px solid #efeeeb;
}

.join-content .btn,
.menu-container .btn-buy-jars {
  border-color: #e43d2f;
}

.join-content .btn:hover,
.menu-container .btn-buy-jars:hover,
#services .service-footer-right .btn:hover {
  background-color: #efeeeb;
  color: #e43d2f;
  border-color: #efeeeb;
}

.join-content .btn:hover,
.menu-container .btn-buy-jars:hover {
  border-color: #e43d2f;
}

/*Menu*/
.menu-btn-container {
  margin-top: 15px;
}

.menu-image {
  flex: 0 0 30%;
  margin-right: 20px;
  max-height: 250px;
}

.menu-list li {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding: 15px 0;
}

.menu-list li h4 {
  font-family: 'local_breweryfour', sans-serif;
  font-size: 26px;
  color: #789b4a;
}

.menu-list li:nth-child(2n) {
  flex-direction: row-reverse;
}

.menu-list li:nth-child(2n) .menu-image,
.menu-list li:nth-child(2n) .menu-image-placeholder {
  margin-left: 20px;
  margin-right: 0;
}

@media (min-width: 768px) {
  .menu-container {
    padding: 15px;
  }
}

/*FAQ*/

/*Contact*/

.validation {
  color: red;
  display: none;
  margin: 0 0 20px;
  font-weight: 400;
  font-size: 13px;
}

#sendmessage {
  color: green;
  border: 1px solid green;
  display: none;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

#errormessage {
  color: red;
  display: none;
  border: 1px solid red;
  text-align: center;
  padding: 15px;
  font-weight: 600;
  margin-bottom: 15px;
}

#sendmessage.show,
#errormessage.show,
.show {
  display: block;
}

/* Contact */

.contact-container {
  line-height: 2;
}
/* ... */

